--- a/js/style.css
+++ b/js/style.css
@@ -1,48 +1,48 @@
 *{margin: 0; padding: 0;}
-body {
+body{
     background-color: #d0e4fe;
 	height: 100%;
 	width: 100%;
 	font-family: arial, helvetica, sans-serif;
     font-size: 12px;
 }
-header {	
-	height: 137px;
+header[id="banner"]{	
+	height:15%;
 	background-color: #2CBB78;
 	text-align: center;
 }
-.menu {
+ul[class="menu"]{
 	list-style:none; 
 	border:1px solid #c0c0c0; 
 	float:left; 
 }
-.menu li {
+ul[class="menu"] li{
 	position:relative; 
 	float:left; 
 	border-right:1px solid #c0c0c0; 
 }
-.menu li a {
+ul[class="menu"] li a{
 	color:#333; 
 	text-decoration:none; 
 	padding:5px 10px; 
 	display:block;
 }
  
-.menu li a:hover {
+ul[class="menu"] li a:hover{
 	background:#333; 
 	color:#fff; 
 	-moz-box-shadow:0 3px 10px 0 #CCC; 
 	-webkit-box-shadow:0 3px 10px 0 #ccc; 
 	text-shadow:0px 0px 5px #fff; 
 }
-.menu li:hover ul, .menu li.over ul {
+ul[class="menu"] li:hover ul, .menu li.over ul{
 	display:block;
 }
-.menu li ul li {
+ul[class="menu"] li ul li{
 	border:1px solid #c0c0c0; 
 	display:block; 
 	width:150px;
 }
-.logo {
+.logo{
 	Height:110px;
 }
